<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/enter_search_product">

        <requestFocus></requestFocus>
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/searchButton"
        android:layout_alignBottom="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/searchButton">

        <RadioButton
            android:id="@+id/radioMigros"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/migros" />

        <RadioButton
            android:id="@+id/radioA101"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/a101" />

        <RadioButton
            android:id="@+id/radioSok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sok" />

    </RadioGroup>

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextInput"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:onClick="onClick"
        android:text="@string/search"
        tools:text="@string/search" />

    <ListView
        android:id="@+id/productList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp">

    </ListView>

</RelativeLayout>